# trading-journal

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
.github/workflows/: ci.yml
code/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
code/backend/deploy/: README.md  backup.sh  docker-backup.sh  trading-journal-api.service  trading-journal-backup.service  trading-journal-backup.timer
code/backend/migrations/: 0001_init.sql  0002_setups_review.sql  0003_setup_fields.sql  0004_remove_default_account.sql
code/backend/scripts/: seed.sh
code/backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
code/backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
code/backend/src/csv_import/: mod.rs  mt5.rs
code/backend/src/routes/: accounts.rs  health.rs  import.rs  market.rs  mod.rs  setups.rs  stats.rs  trades.rs
code/backend/tests/: api.rs
code/mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
code/mobile/src/: theme-neon.ts  theme.ts
code/mobile/src/api/: client.ts  types.ts
code/mobile/src/auth/: AuthContext.tsx
code/mobile/src/components/: AccountPicker.tsx  AppHeader.tsx  AssetBar.tsx  CalendarHeatmap.tsx  Charts.tsx  DashboardExtras.tsx  FilterBar.tsx  MacroDetail.tsx  PropFirmCard.tsx  ScoreGauge.tsx  Section.tsx  WinRing.tsx
code/mobile/src/hooks/: useApi.ts
code/mobile/src/navigation/: RootNavigator.tsx
code/mobile/src/screens/: CalendarScreen.tsx  CoachScreen.tsx  DashboardScreen.tsx  GuideScreen.tsx  LockScreen.tsx  LoginScreen.tsx  MacroScreen.tsx  NewsScreen.tsx  ProfileScreen.tsx  (+8 more)
docs/screenshots/: README.md
sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-14.md  sprint-15.md  sprint-16.md  sprint-17.md  sprint-18.md  sprint-19.md  sprint-20.md  sprint-21.md  sprint-22.md  sprint-23.md  sprint-24.md  sprint-25.md  sprint-26.md  sprint-27.md  sprint-28.md  sprint-29.md
(+10 files in other folders)
