[package]
name = "trading-journal-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Self-hosted personal trading journal API (axum + SQLite)"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
# NOTE: tower-http 0.5 (not 0.4 as in ARCHITECTURE.md) is required for axum 0.7,
# because axum 0.7 moved to the http 1.0 ecosystem. 0.4 only works with axum 0.6.
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"   # re-exports the `password_hash` crate (PHC strings, salts)
# OsRng for salt generation — `getrandom` feature is required to expose it.
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Import parsing
csv = "1"
calamine = "0.36"   # read MT5 history exports directly from .xlsx
zip = "0.6"         # re-pack MT5 .xlsx after transcoding its UTF-16 XML to UTF-8

# Macro data (economic calendar + news)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
feed-rs = "2"

# Errors & logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
tower_governor = { version = "0.5.0", features = ["axum"] }

[dev-dependencies]
# Integration tests drive the router in-process.
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"

[profile.release]
opt-level = "z"   # optimize for size — target is a 512MB VM / Raspberry Pi
lto = true
codegen-units = 1
strip = true
